--- a/local.properties
+++ b/local.properties
@@ -7,8 +7,7 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 11 13:24:53 IST 2016
-sdk.dir=/home/redcarpet/Android/Sdk
+#Tue Jul 11 11:36:18 EAT 2017
 bintray.apikey=6af681e37d939062a302fa2a526330e7bae58738
+sdk.dir=C\:\\Android\\android-sdk
 bintray.user=balrampandey19
-
